// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List Row > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root HvTable-listRow css-1w2ag30-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head HvTableRow-variantListHead css-ix9p56"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-egwaik-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-egwaik-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head HvTableHeader-variantList css-egwaik-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1w9drby"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1w9drby"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1w9drby"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1w9drby"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1w9drby"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvFocus-root grid grid HvTableRow-root HvTableRow-body HvTableRow-variantList css-1w9drby"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-1i8b5l8"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Simple Table > should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root css-e7buj3-StyledTableContainer e12doz4i0"
  >
    <table
      class="HvTable-root css-1yyu3d-StyledTable e12hqti90"
    >
      <thead
        class="HvTableHead-root css-1c8o9gy-StyledTableHead e122w5bu0"
      >
        <tr
          class="HvTableRow-root HvTableRow-head css-sorz8r"
        >
          <th
            class="HvTableHeader-root HvTableHeader-head css-105w81t-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-105w81t-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root HvTableHeader-head css-105w81t-StyledTableHeader eopmu0i1"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent css-1onrtww-StyledHeaderContent etcp1bl3"
            >
              <div
                class="HvTableHeader-headerParagraph etcp1bl1 HvTypography-root HvTypography-label css-8osynq-getStyledComponent-StyledTypography e1tnpalo0"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root css-1uj09q8-StyledTableBody e1i1hapa0"
      >
        <tr
          class="grid HvTableRow-root HvTableRow-body css-p7vvyk"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-p7vvyk"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-p7vvyk"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-p7vvyk"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-p7vvyk"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="grid HvTableRow-root HvTableRow-body css-p7vvyk"
        >
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root HvTableCell-body css-vz06cv"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
